--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,14 @@
   color: black;
   margin-bottom: 50px;
 }
+.card h5{
+  font-size: 12px;
+  font-weight: bold;
+}
+.card button{
+  font-size: 10px;
+  font-weight: bold;
+}
 .card:hover {
   border-color: #0d6efd;
   border: 3px solid #0d6efd;
@@ -57,9 +65,15 @@
     align-items: center;
 }
 .rating{
-  margin-left: 20px;
   margin-bottom: .5rem;
 }
 .modal{
   color: black;
+}
+.container{
+ min-height: 100vh;
+ width: 100%;
+ background-color: white;
+ color: black;
+ margin-left: 20px;
 }
